--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-i18next": "^15.5.1",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
+    "react-lazy-load-image-component": "^1.6.3",
     "react-router-dom": "^7.5.3",
     "react-router-hash-link": "^2.4.3",
     "react-scroll-parallax": "^3.4.5",
